Swagger documentation bug fix
