# storage/api-docs/api-docs.json
@@ -132,21 +132,10 @@
                 "summary": "Store new customers",
                 "description": "Returns customers data",
                 "operationId": "storeCustomer",
-                "parameters": [
-                    {
-                        "name": "bulk",
-                        "in": "query",
-                        "description": "CSV file to create / update customers",
-                        "required": true,
-                        "schema": {
-                            "type": "file"
-                        }
-                    }
-                ],
                 "requestBody": {
                     "required": true,
                     "content": {
-                        "application/json": {
+                        "multipart/form-data": {
                             "schema": {
                                 "$ref": "#/components/schemas/CreateCustomerRequest"
                             }
@@ -335,12 +324,6 @@
             "CreateCustomerRequest": {
                 "title": "Store Customer request",
                 "description": "Store Customer request body data",
-                "required": [
-                    "first_name",
-                    "last_name",
-                    "email",
-                    "phone_number"
-                ],
                 "properties": {
                     "first_name": {
                         "title": "first_name",
@@ -365,6 +348,12 @@
                         "description": "Phone number of the new customer",
                         "type": "string",
                         "example": "94773333333"
+                    },
+                    "bulk": {
+                        "title": "Bulk",
+                        "description": "CSV file to create / update customers",
+                        "type": "string",
+                        "format": "binary"
                     }
                 },
                 "type": "object"
